<resources>
    <string name="app_name">Diary</string>
    <string name="design">Designed and Developed by:</string>
    <string name="Dname1">Miliyon A.</string>
    <string name="Dname2">Berket T.</string>
    <string name="copy">\u00A9 Programing Training</string>
    <string name="edtdiary">Name</string>
    <string name="edttitle">Name</string>
    <string name="Search">Name</string>
    <string name="Title">Title</string>
    <string name="attach">Name</string>
    <string name="save">Name</string>
    <string name="Howwasyourday">Name</string>
    <string name="title_activity_list_of_diary">ListOfDiary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_listof">ListofActivity</string>
    <string name="title_activity_listof_diary">ListofDiary</string>
</resources>