<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateNewDiary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/tvwCreatedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/edttitle"
            android:background="#FFFFFF"
            android:gravity="start|top"
            android:hint="@string/Title"
            android:inputType="textAutoCorrect"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtdiary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/edtdiary"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="How was your day?:)"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>