<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FDF7C "
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="312dp"
        android:layout_height="31dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="627dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="73dp"
        android:fontFamily="monospace"
        android:text="@string/copy"
        android:textAlignment="center"
        android:textColor="#FBF8F8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="201dp"
        android:layout_height="194dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="404dp"
        android:src="@drawable/icon"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="315dp"
        android:fontFamily="casual"
        android:text="@string/design"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="184dp"
        android:fontFamily="casual"
        android:text="@string/Dname2"
        android:textAlignment="center"
        android:textColor="#FAF7F7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="239dp"
        android:fontFamily="casual"
        android:text="@string/Dname1"
        android:textAlignment="center"
        android:textColor="#F4F2F2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>